--- a/package/batocera/emulationstation/batocera-es-system/locales/ja_JP/batocera-es-system.po
+++ b/package/batocera/emulationstation/batocera-es-system/locales/ja_JP/batocera-es-system.po
@@ -2212,17 +2212,17 @@ msgctxt "game_options"
 msgid "Can change the language of some games."
 msgstr "ゲームの言語を変更します"
 
-#. TRANSLATION: libretro/neocd, redream
+#. TRANSLATION: libretro/neocd, flycast/pcsx2, redream
 msgctxt "game_options"
 msgid "Japan"
 msgstr "日本"
 
-#. TRANSLATION: libretro/neocd
+#. TRANSLATION: libretro/neocd, flycast/pcsx2
 msgctxt "game_options"
 msgid "USA"
 msgstr "アメリカ合衆国"
 
-#. TRANSLATION: libretro/neocd, redream
+#. TRANSLATION: libretro/neocd, flycast/pcsx2, redream
 msgctxt "game_options"
 msgid "Europe"
 msgstr "ヨーロッパ"
@@ -3038,7 +3038,7 @@ msgctxt "game_options"
 msgid "Ignored with 'Cycle-exact'."
 msgstr "'Cycle-exact'では無視されます"
 
-#. TRANSLATION: libretro/puae, flycast
+#. TRANSLATION: libretro/puae, flycast/pcsx2, flycast/pcsx2, flycast
 msgctxt "game_options"
 msgid "Default"
 msgstr "標準"
@@ -5053,6 +5053,91 @@ msgctxt "game_options"
 msgid "NeGcon (Rumble)"
 msgstr "ネジコン(ナムコ)(振動有)"
 
+#. TRANSLATION: flycast/pcsx2
+msgctxt "game_options"
+msgid "CHOOSE DREAMCAST LANGUAGE"
+msgstr ""
+
+#. TRANSLATION: flycast/pcsx2
+msgctxt "game_options"
+msgid "Choose the emulator language."
+msgstr ""
+
+#. TRANSLATION: flycast/pcsx2, redream, sonic2013, soniccd
+msgctxt "game_options"
+msgid "Japanese"
+msgstr "日本語"
+
+#. TRANSLATION: flycast/pcsx2, sonic2013, soniccd
+msgctxt "game_options"
+msgid "English"
+msgstr "英語"
+
+#. TRANSLATION: flycast/pcsx2, redream, sonic2013, soniccd
+msgctxt "game_options"
+msgid "German"
+msgstr "ドイツ語"
+
+#. TRANSLATION: flycast/pcsx2, redream, sonic2013, soniccd
+msgctxt "game_options"
+msgid "French"
+msgstr "フランス語"
+
+#. TRANSLATION: flycast/pcsx2, redream, sonic2013, soniccd
+msgctxt "game_options"
+msgid "Spanish"
+msgstr "スペイン語"
+
+#. TRANSLATION: flycast/pcsx2, redream, sonic2013, soniccd
+msgctxt "game_options"
+msgid "Italian"
+msgstr "イタリア語"
+
+#. TRANSLATION: flycast/pcsx2
+msgctxt "game_options"
+msgid "CHOOSE DREAMCAST CONSOLE REGION"
+msgstr ""
+
+#. TRANSLATION: flycast/pcsx2
+msgctxt "game_options"
+msgid "Choose your console region."
+msgstr ""
+
+#. TRANSLATION: flycast/pcsx2
+msgctxt "game_options"
+msgid "ENABLE AUTO LOAD STATES"
+msgstr ""
+
+#. TRANSLATION: flycast/pcsx2
+msgctxt "game_options"
+msgid "Enable Dreamcast auto load states."
+msgstr ""
+
+#. TRANSLATION: flycast/pcsx2, flycast/pcsx2, flycast/pcsx2, redream, redream, ...
+msgctxt "game_options"
+msgid "Off (Default)"
+msgstr "使用しない (標準)"
+
+#. TRANSLATION: flycast/pcsx2
+msgctxt "game_options"
+msgid "ENABLE AUTO SAVE STATES"
+msgstr ""
+
+#. TRANSLATION: flycast/pcsx2
+msgctxt "game_options"
+msgid "Enable Dreamcast auto saves states."
+msgstr ""
+
+#. TRANSLATION: flycast/pcsx2
+msgctxt "game_options"
+msgid "FORCE WINDOWS CE"
+msgstr ""
+
+#. TRANSLATION: flycast/pcsx2
+msgctxt "game_options"
+msgid "Forces Dreamcast Windows CE mode on."
+msgstr ""
+
 #. TRANSLATION: flycast, openbor
 msgctxt "game_options"
 msgid "SCREEN RATIO"
@@ -5857,11 +5942,6 @@ msgctxt "game_options"
 msgid "Enable auto frameskipping for performance on lower-end systems."
 msgstr ""
 
-#. TRANSLATION: redream, redream, mame
-msgctxt "game_options"
-msgid "Off (Default)"
-msgstr "使用しない (標準)"
-
 #. TRANSLATION: redream
 msgctxt "game_options"
 msgid "Enable vertical sync to avoid tearing in some cases."
@@ -5917,31 +5997,6 @@ msgstr ""
 msgctxt "game_options"
 msgid "English (Default)"
 msgstr ""
-
-#. TRANSLATION: redream, sonic2013, soniccd
-msgctxt "game_options"
-msgid "German"
-msgstr "ドイツ語"
-
-#. TRANSLATION: redream, sonic2013, soniccd
-msgctxt "game_options"
-msgid "French"
-msgstr "フランス語"
-
-#. TRANSLATION: redream, sonic2013, soniccd
-msgctxt "game_options"
-msgid "Spanish"
-msgstr "スペイン語"
-
-#. TRANSLATION: redream, sonic2013, soniccd
-msgctxt "game_options"
-msgid "Italian"
-msgstr "イタリア語"
-
-#. TRANSLATION: redream, sonic2013, soniccd
-msgctxt "game_options"
-msgid "Japanese"
-msgstr "日本語"
 
 #. TRANSLATION: redream
 msgctxt "game_options"
@@ -6772,11 +6827,6 @@ msgstr "BIOS起動アニメーションを表示します"
 msgctxt "game_options"
 msgid "Change the game's language."
 msgstr "ゲーム言語を変更します"
-
-#. TRANSLATION: sonic2013, soniccd
-msgctxt "game_options"
-msgid "English"
-msgstr "英語"
 
 #. TRANSLATION: sonic2013
 msgctxt "game_options"
