--- a/package/batocera/emulationstation/batocera-es-system/locales/ja_JP/batocera-es-system.po
+++ b/package/batocera/emulationstation/batocera-es-system/locales/ja_JP/batocera-es-system.po
@@ -3205,6 +3205,26 @@ msgstr "AmigaP2のコントローラータイプを選択します"
 
 #. TRANSLATION: libretro/puae, libretro/puae
 msgctxt "game_options"
+msgid "PINBALL MAPPING MODE"
+msgstr ""
+
+#. TRANSLATION: libretro/puae, libretro/puae
+msgctxt "game_options"
+msgid "Use to play pinball games with correct mapping."
+msgstr ""
+
+#. TRANSLATION: libretro/puae, libretro/puae
+msgctxt "game_options"
+msgid "Modern"
+msgstr ""
+
+#. TRANSLATION: libretro/puae, libretro/puae
+msgctxt "game_options"
+msgid "Classic"
+msgstr ""
+
+#. TRANSLATION: libretro/puae, libretro/puae
+msgctxt "game_options"
 msgid "BOOT ANIMATION FIRST"
 msgstr "起動アニメーションを表示"
 
@@ -4542,7 +4562,7 @@ msgctxt "game_options"
 msgid "Original"
 msgstr "オリジナル"
 
-#. TRANSLATION: daphne, openbor, redream, xemu, demul
+#. TRANSLATION: daphne, openbor, pcsx2, redream, xemu, ...
 msgctxt "game_options"
 msgid "Stretch"
 msgstr "引き伸ばし"
@@ -5386,6 +5406,16 @@ msgctxt "game_options"
 msgid "Software"
 msgstr "ソフトウェア"
 
+#. TRANSLATION: pcsx2, rpcs3
+msgctxt "game_options"
+msgid "TV MODE"
+msgstr ""
+
+#. TRANSLATION: pcsx2
+msgctxt "game_options"
+msgid "PS2's internal ratio setting. Some games only support 4/3."
+msgstr ""
+
 #. TRANSLATION: pcsx2
 msgctxt "game_options"
 msgid "Some games have issues when the animation is shown, others require it."
@@ -5759,11 +5789,6 @@ msgstr ""
 #. TRANSLATION: rpcs3
 msgctxt "game_options"
 msgid "Precise Interpreter"
-msgstr ""
-
-#. TRANSLATION: rpcs3
-msgctxt "game_options"
-msgid "TV MODE"
 msgstr ""
 
 #. TRANSLATION: rpcs3
