--- a/package/batocera/emulationstation/batocera-es-system/locales/pt_BR/batocera-es-system.po
+++ b/package/batocera/emulationstation/batocera-es-system/locales/pt_BR/batocera-es-system.po
@@ -3217,6 +3217,26 @@ msgstr ""
 
 #. TRANSLATION: libretro/puae, libretro/puae
 msgctxt "game_options"
+msgid "PINBALL MAPPING MODE"
+msgstr ""
+
+#. TRANSLATION: libretro/puae, libretro/puae
+msgctxt "game_options"
+msgid "Use to play pinball games with correct mapping."
+msgstr ""
+
+#. TRANSLATION: libretro/puae, libretro/puae
+msgctxt "game_options"
+msgid "Modern"
+msgstr ""
+
+#. TRANSLATION: libretro/puae, libretro/puae
+msgctxt "game_options"
+msgid "Classic"
+msgstr ""
+
+#. TRANSLATION: libretro/puae, libretro/puae
+msgctxt "game_options"
 msgid "BOOT ANIMATION FIRST"
 msgstr ""
 
@@ -4549,7 +4569,7 @@ msgctxt "game_options"
 msgid "Original"
 msgstr ""
 
-#. TRANSLATION: daphne, openbor, redream, xemu, demul
+#. TRANSLATION: daphne, openbor, pcsx2, redream, xemu, ...
 msgctxt "game_options"
 msgid "Stretch"
 msgstr ""
@@ -5384,6 +5404,16 @@ msgctxt "game_options"
 msgid "Software"
 msgstr ""
 
+#. TRANSLATION: pcsx2, rpcs3
+msgctxt "game_options"
+msgid "TV MODE"
+msgstr ""
+
+#. TRANSLATION: pcsx2
+msgctxt "game_options"
+msgid "PS2's internal ratio setting. Some games only support 4/3."
+msgstr ""
+
 #. TRANSLATION: pcsx2
 msgctxt "game_options"
 msgid "Some games have issues when the animation is shown, others require it."
@@ -5754,11 +5784,6 @@ msgstr ""
 #. TRANSLATION: rpcs3
 msgctxt "game_options"
 msgid "Precise Interpreter"
-msgstr ""
-
-#. TRANSLATION: rpcs3
-msgctxt "game_options"
-msgid "TV MODE"
 msgstr ""
 
 #. TRANSLATION: rpcs3
