--- a/package/batocera/emulationstation/batocera-es-system/locales/ru_RU/batocera-es-system.po
+++ b/package/batocera/emulationstation/batocera-es-system/locales/ru_RU/batocera-es-system.po
@@ -3220,6 +3220,26 @@ msgstr "Выберите тип контроллера для Amiga P2."
 
 #. TRANSLATION: libretro/puae, libretro/puae
 msgctxt "game_options"
+msgid "PINBALL MAPPING MODE"
+msgstr ""
+
+#. TRANSLATION: libretro/puae, libretro/puae
+msgctxt "game_options"
+msgid "Use to play pinball games with correct mapping."
+msgstr ""
+
+#. TRANSLATION: libretro/puae, libretro/puae
+msgctxt "game_options"
+msgid "Modern"
+msgstr ""
+
+#. TRANSLATION: libretro/puae, libretro/puae
+msgctxt "game_options"
+msgid "Classic"
+msgstr ""
+
+#. TRANSLATION: libretro/puae, libretro/puae
+msgctxt "game_options"
 msgid "BOOT ANIMATION FIRST"
 msgstr "СНАЧАЛА АНИМАЦИЯ ЗАГРУЗКИ"
 
@@ -4566,7 +4586,7 @@ msgctxt "game_options"
 msgid "Original"
 msgstr "Оригинал"
 
-#. TRANSLATION: daphne, openbor, redream, xemu, demul
+#. TRANSLATION: daphne, openbor, pcsx2, redream, xemu, ...
 msgctxt "game_options"
 msgid "Stretch"
 msgstr "Растянуть"
@@ -5412,6 +5432,16 @@ msgctxt "game_options"
 msgid "Software"
 msgstr "Software"
 
+#. TRANSLATION: pcsx2, rpcs3
+msgctxt "game_options"
+msgid "TV MODE"
+msgstr ""
+
+#. TRANSLATION: pcsx2
+msgctxt "game_options"
+msgid "PS2's internal ratio setting. Some games only support 4/3."
+msgstr ""
+
 #. TRANSLATION: pcsx2
 msgctxt "game_options"
 msgid "Some games have issues when the animation is shown, others require it."
@@ -5793,11 +5823,6 @@ msgstr ""
 #. TRANSLATION: rpcs3
 msgctxt "game_options"
 msgid "Precise Interpreter"
-msgstr ""
-
-#. TRANSLATION: rpcs3
-msgctxt "game_options"
-msgid "TV MODE"
 msgstr ""
 
 #. TRANSLATION: rpcs3
