--- a/package/batocera/emulationstation/batocera-es-system/locales/es/batocera-es-system.po
+++ b/package/batocera/emulationstation/batocera-es-system/locales/es/batocera-es-system.po
@@ -4716,6 +4716,11 @@ msgctxt "game_options"
 msgid "8x 5K (5120x4224)"
 msgstr "8x 5K (5120x4224)"
 
+#. TRANSLATION: dolphin, mupen64plus, demul
+msgctxt "game_options"
+msgid "GAME ASPECT RATIO"
+msgstr "RELACIÓN DE ASPECTO DEL JUEGO"
+
 #. TRANSLATION: dolphin
 msgctxt "game_options"
 msgid "The final output image, unrelated to the Wii's emulated NAND setting."
@@ -5337,11 +5342,6 @@ msgstr "2M"
 msgctxt "game_options"
 msgid "4M"
 msgstr "4M"
-
-#. TRANSLATION: mupen64plus, demul
-msgctxt "game_options"
-msgid "GAME ASPECT RATIO"
-msgstr "RELACIÓN DE ASPECTO DEL JUEGO"
 
 #. TRANSLATION: mupen64plus
 msgctxt "game_options"
