--- a/package/batocera/emulationstation/batocera-es-system/locales/batocera-es-system.pot
+++ b/package/batocera/emulationstation/batocera-es-system/locales/batocera-es-system.pot
@@ -4670,6 +4670,11 @@ msgctxt "game_options"
 msgid "8x 5K (5120x4224)"
 msgstr ""
 
+#. TRANSLATION: dolphin, mupen64plus, demul
+msgctxt "game_options"
+msgid "GAME ASPECT RATIO"
+msgstr ""
+
 #. TRANSLATION: dolphin
 msgctxt "game_options"
 msgid "The final output image, unrelated to the Wii's emulated NAND setting."
@@ -5290,11 +5295,6 @@ msgstr ""
 #. TRANSLATION: hatari
 msgctxt "game_options"
 msgid "4M"
-msgstr ""
-
-#. TRANSLATION: mupen64plus, demul
-msgctxt "game_options"
-msgid "GAME ASPECT RATIO"
 msgstr ""
 
 #. TRANSLATION: mupen64plus
