modified:   package/batocera/emulationstation/batocera-es-system/es_systems.yml

--- a/package/batocera/emulationstation/batocera-es-system/locales/es/batocera-es-system.po
+++ b/package/batocera/emulationstation/batocera-es-system/locales/es/batocera-es-system.po
@@ -1775,7 +1775,7 @@ msgctxt "game_options"
 msgid "LCD Ghosting (Fast)"
 msgstr "LCD Ghosting (Rápido)"
 
-#. TRANSLATION: libretro/gambatte, libretro/mgba, libretro/mgba, libretro/vba-m, libretro/vba-m
+#. TRANSLATION: libretro/gambatte, libretro/mgba, libretro/mgba, libretro/sameboy, libretro/vba-m, ...
 msgctxt "game_options"
 msgid "COLOR CORRECTION"
 msgstr "CORRECCIÓN DE COLOR"
@@ -2881,7 +2881,7 @@ msgctxt "game_options"
 msgid "LCD GHOSTING EFFECTS"
 msgstr "EFECTO GHOSTING DEL LCD"
 
-#. TRANSLATION: libretro/potator
+#. TRANSLATION: libretro/potator, libretro/sameboy
 msgctxt "game_options"
 msgid "COLOR PALETTE"
 msgstr "PALETA DE COLOR"
@@ -3614,6 +3614,86 @@ msgstr "64 MHz (Overclock)"
 msgctxt "game_options"
 msgid "EMULATE PCG-8100"
 msgstr "EMULAR PCG-8100"
+
+#. TRANSLATION: libretro/sameboy
+msgctxt "game_options"
+msgid "Select the color palette to use"
+msgstr ""
+
+#. TRANSLATION: libretro/sameboy
+msgctxt "game_options"
+msgid "Greyscale"
+msgstr ""
+
+#. TRANSLATION: libretro/sameboy
+msgctxt "game_options"
+msgid "Lime (Game Boy)"
+msgstr ""
+
+#. TRANSLATION: libretro/sameboy
+msgctxt "game_options"
+msgid "Olive (Game Boy Pocket)"
+msgstr ""
+
+#. TRANSLATION: libretro/sameboy
+msgctxt "game_options"
+msgid "Teal (Game Boy Light)"
+msgstr ""
+
+#. TRANSLATION: libretro/sameboy
+msgctxt "game_options"
+msgid "Simulate LCD color inaccuracy"
+msgstr ""
+
+#. TRANSLATION: libretro/sameboy
+msgctxt "game_options"
+msgid "Emulate Hardware"
+msgstr ""
+
+#. TRANSLATION: libretro/sameboy
+msgctxt "game_options"
+msgid "Preserve Brightness"
+msgstr ""
+
+#. TRANSLATION: libretro/sameboy
+msgctxt "game_options"
+msgid "Reduce Contrast"
+msgstr ""
+
+#. TRANSLATION: libretro/sameboy
+msgctxt "game_options"
+msgid "Correct Color Curves"
+msgstr ""
+
+#. TRANSLATION: libretro/sameboy
+msgctxt "game_options"
+msgid "Harsh Reality (Low Contrast)"
+msgstr ""
+
+#. TRANSLATION: libretro/sameboy
+msgctxt "game_options"
+msgid "SUPER GAME BOY MODEL"
+msgstr ""
+
+#. TRANSLATION: libretro/sameboy
+msgctxt "game_options"
+msgid "Select the SGB model to use"
+msgstr ""
+
+#. TRANSLATION: libretro/sameboy
+msgctxt "game_options"
+msgid "Super Game Boy NTSC"
+msgstr ""
+
+#. TRANSLATION: libretro/sameboy
+msgctxt "game_options"
+msgid "Super Game Boy PAL"
+msgstr ""
+
+#. TRANSLATION: libretro/sameboy
+msgctxt "game_options"
+msgid "Super Game Boy 2"
+msgstr ""
 
 #. TRANSLATION: libretro/scummvm
 msgctxt "game_options"
