--- a/package/batocera/emulationstation/batocera-es-system/locales/fr/batocera-es-system.po
+++ b/package/batocera/emulationstation/batocera-es-system/locales/fr/batocera-es-system.po
@@ -1740,7 +1740,7 @@ msgctxt "game_options"
 msgid "LCD Ghosting (Fast)"
 msgstr ""
 
-#. TRANSLATION: libretro/gambatte, libretro/mgba, libretro/mgba, libretro/vba-m, libretro/vba-m
+#. TRANSLATION: libretro/gambatte, libretro/mgba, libretro/mgba, libretro/sameboy, libretro/vba-m, ...
 msgctxt "game_options"
 msgid "COLOR CORRECTION"
 msgstr ""
@@ -2842,7 +2842,7 @@ msgctxt "game_options"
 msgid "LCD GHOSTING EFFECTS"
 msgstr ""
 
-#. TRANSLATION: libretro/potator
+#. TRANSLATION: libretro/potator, libretro/sameboy
 msgctxt "game_options"
 msgid "COLOR PALETTE"
 msgstr ""
@@ -3572,6 +3572,86 @@ msgstr ""
 #. TRANSLATION: libretro/quasi88
 msgctxt "game_options"
 msgid "EMULATE PCG-8100"
+msgstr ""
+
+#. TRANSLATION: libretro/sameboy
+msgctxt "game_options"
+msgid "Select the color palette to use"
+msgstr ""
+
+#. TRANSLATION: libretro/sameboy
+msgctxt "game_options"
+msgid "Greyscale"
+msgstr ""
+
+#. TRANSLATION: libretro/sameboy
+msgctxt "game_options"
+msgid "Lime (Game Boy)"
+msgstr ""
+
+#. TRANSLATION: libretro/sameboy
+msgctxt "game_options"
+msgid "Olive (Game Boy Pocket)"
+msgstr ""
+
+#. TRANSLATION: libretro/sameboy
+msgctxt "game_options"
+msgid "Teal (Game Boy Light)"
+msgstr ""
+
+#. TRANSLATION: libretro/sameboy
+msgctxt "game_options"
+msgid "Simulate LCD color inaccuracy"
+msgstr ""
+
+#. TRANSLATION: libretro/sameboy
+msgctxt "game_options"
+msgid "Emulate Hardware"
+msgstr ""
+
+#. TRANSLATION: libretro/sameboy
+msgctxt "game_options"
+msgid "Preserve Brightness"
+msgstr ""
+
+#. TRANSLATION: libretro/sameboy
+msgctxt "game_options"
+msgid "Reduce Contrast"
+msgstr ""
+
+#. TRANSLATION: libretro/sameboy
+msgctxt "game_options"
+msgid "Correct Color Curves"
+msgstr ""
+
+#. TRANSLATION: libretro/sameboy
+msgctxt "game_options"
+msgid "Harsh Reality (Low Contrast)"
+msgstr ""
+
+#. TRANSLATION: libretro/sameboy
+msgctxt "game_options"
+msgid "SUPER GAME BOY MODEL"
+msgstr ""
+
+#. TRANSLATION: libretro/sameboy
+msgctxt "game_options"
+msgid "Select the SGB model to use"
+msgstr ""
+
+#. TRANSLATION: libretro/sameboy
+msgctxt "game_options"
+msgid "Super Game Boy NTSC"
+msgstr ""
+
+#. TRANSLATION: libretro/sameboy
+msgctxt "game_options"
+msgid "Super Game Boy PAL"
+msgstr ""
+
+#. TRANSLATION: libretro/sameboy
+msgctxt "game_options"
+msgid "Super Game Boy 2"
 msgstr ""
 
 #. TRANSLATION: libretro/scummvm
