--- a/package/batocera/emulationstation/batocera-es-system/locales/ja_JP/batocera-es-system.po
+++ b/package/batocera/emulationstation/batocera-es-system/locales/ja_JP/batocera-es-system.po
@@ -1753,7 +1753,7 @@ msgctxt "game_options"
 msgid "LCD Ghosting (Fast)"
 msgstr "LCDゴースト（高速）"
 
-#. TRANSLATION: libretro/gambatte, libretro/mgba, libretro/mgba, libretro/vba-m, libretro/vba-m
+#. TRANSLATION: libretro/gambatte, libretro/mgba, libretro/mgba, libretro/sameboy, libretro/vba-m, ...
 msgctxt "game_options"
 msgid "COLOR CORRECTION"
 msgstr "色補正"
@@ -2858,7 +2858,7 @@ msgctxt "game_options"
 msgid "LCD GHOSTING EFFECTS"
 msgstr "LCDにゴースト効果を付加します"
 
-#. TRANSLATION: libretro/potator
+#. TRANSLATION: libretro/potator, libretro/sameboy
 msgctxt "game_options"
 msgid "COLOR PALETTE"
 msgstr "カラーパレット"
@@ -3592,6 +3592,86 @@ msgstr "64 MHz（オーバークロック）"
 msgctxt "game_options"
 msgid "EMULATE PCG-8100"
 msgstr "PCG-8100拡張ハードウェア"
+
+#. TRANSLATION: libretro/sameboy
+msgctxt "game_options"
+msgid "Select the color palette to use"
+msgstr ""
+
+#. TRANSLATION: libretro/sameboy
+msgctxt "game_options"
+msgid "Greyscale"
+msgstr ""
+
+#. TRANSLATION: libretro/sameboy
+msgctxt "game_options"
+msgid "Lime (Game Boy)"
+msgstr ""
+
+#. TRANSLATION: libretro/sameboy
+msgctxt "game_options"
+msgid "Olive (Game Boy Pocket)"
+msgstr ""
+
+#. TRANSLATION: libretro/sameboy
+msgctxt "game_options"
+msgid "Teal (Game Boy Light)"
+msgstr ""
+
+#. TRANSLATION: libretro/sameboy
+msgctxt "game_options"
+msgid "Simulate LCD color inaccuracy"
+msgstr ""
+
+#. TRANSLATION: libretro/sameboy
+msgctxt "game_options"
+msgid "Emulate Hardware"
+msgstr ""
+
+#. TRANSLATION: libretro/sameboy
+msgctxt "game_options"
+msgid "Preserve Brightness"
+msgstr ""
+
+#. TRANSLATION: libretro/sameboy
+msgctxt "game_options"
+msgid "Reduce Contrast"
+msgstr ""
+
+#. TRANSLATION: libretro/sameboy
+msgctxt "game_options"
+msgid "Correct Color Curves"
+msgstr ""
+
+#. TRANSLATION: libretro/sameboy
+msgctxt "game_options"
+msgid "Harsh Reality (Low Contrast)"
+msgstr ""
+
+#. TRANSLATION: libretro/sameboy
+msgctxt "game_options"
+msgid "SUPER GAME BOY MODEL"
+msgstr ""
+
+#. TRANSLATION: libretro/sameboy
+msgctxt "game_options"
+msgid "Select the SGB model to use"
+msgstr ""
+
+#. TRANSLATION: libretro/sameboy
+msgctxt "game_options"
+msgid "Super Game Boy NTSC"
+msgstr ""
+
+#. TRANSLATION: libretro/sameboy
+msgctxt "game_options"
+msgid "Super Game Boy PAL"
+msgstr ""
+
+#. TRANSLATION: libretro/sameboy
+msgctxt "game_options"
+msgid "Super Game Boy 2"
+msgstr ""
 
 #. TRANSLATION: libretro/scummvm
 msgctxt "game_options"
