--- a/package/batocera/emulationstation/batocera-es-system/locales/es/batocera-es-system.po
+++ b/package/batocera/emulationstation/batocera-es-system/locales/es/batocera-es-system.po
@@ -48,7 +48,7 @@ msgctxt "game_options"
 msgid "Core provided"
 msgstr "Proporcionado por el núcleo"
 
-#. TRANSLATION: shared, shared, libretro/mesen
+#. TRANSLATION: shared, shared, libretro/mesen, libretro/gambatte
 msgctxt "game_options"
 msgid "Custom"
 msgstr "Personalizado"
